# nih-plug

./: Cargo.toml  README.md  bundler.toml
.cargo/: config.toml
auval/: Cargo.toml
auval/src/: main.rs
nih_plug_derive/: Cargo.toml
nih_plug_derive/src/: au.rs  lib.rs
nih_plug_egui/: Cargo.toml
nih_plug_egui/src/: editor.rs
nih_plug_iced/: Cargo.toml
nih_plug_iced/src/: editor.rs  wrapper.rs
nih_plug_iced/src/widgets/: generic_ui.rs  param_slider.rs  peak_meter.rs
nih_plug_slint/: Cargo.toml
nih_plug_slint/src/: assets.rs  editor.rs  lib.rs
nih_plug_vizia/: Cargo.toml
nih_plug_vizia/src/widgets/: param_slider.rs  peak_meter.rs  resize_handle.rs
nih_plug_xtask/: Cargo.toml
nih_plug_xtask/src/: lib.rs  util.rs
plugins/buffr_glitch/src/: buffer.rs  lib.rs
plugins/crisp/src/: lib.rs
plugins/crossover/src/: lib.rs
plugins/diopser/src/: lib.rs  params.rs
plugins/diopser/src/editor/: analyzer.rs  button.rs  slider.rs  xy_pad.rs
plugins/examples/byo_gui_gl/src/: lib.rs
plugins/examples/byo_gui_softbuffer/src/: lib.rs
plugins/examples/byo_gui_wgpu/src/: lib.rs
plugins/examples/gain/src/: lib.rs
plugins/examples/gain_gui_egui/src/: lib.rs
plugins/examples/gain_gui_iced/src/: editor.rs  lib.rs
plugins/examples/gain_gui_slint/: Cargo.toml  build.rs  build_web.sh
plugins/examples/gain_gui_slint/src/: editor.rs  gain.rs  lib.rs  main.rs  window.slint
plugins/examples/gain_gui_slint/web/: coi-serviceworker.js  config.json  index.html  main.js  style.css
plugins/examples/gain_gui_vizia/src/: lib.rs
plugins/examples/midi_inverter/src/: lib.rs
plugins/examples/poly_mod_synth/src/: lib.rs
plugins/examples/sine/src/: lib.rs
plugins/examples/stft/src/: lib.rs
plugins/examples/sysex/src/: lib.rs
plugins/loudness_war_winner/src/: lib.rs
plugins/puberty_simulator/src/: lib.rs
plugins/safety_limiter/src/: lib.rs
plugins/soft_vacuum/src/: lib.rs
plugins/spectral_compressor/src/: analyzer.rs  compressor_bank.rs  lib.rs
plugins/spectral_compressor/src/editor/: analyzer.rs  mode_button.rs
src/: context.rs  editor.rs  event_loop.rs  formatters.rs  lib.rs  params.rs  plugin.rs  prelude.rs  sample.rs  util.rs  wrapper.rs
src/event_loop/: background_thread.rs  linux.rs  macos.rs  web.rs  windows.rs
src/params/: float.rs  integer.rs  internals.rs  range.rs  smoothing.rs
src/plugin/: au.rs
src/wrapper/: au.rs  standalone.rs  state.rs  util.rs
src/wrapper/au/: au_types.rs  context.rs  editor.rs  layout.rs  properties.rs  scope.rs  util.rs  wrapper.rs
src/wrapper/clap/: wrapper.rs
src/wrapper/standalone/: backend.rs  config.rs  wrapper.rs
src/wrapper/standalone/backend/: cpal.rs  dummy.rs
