[package]
name = "nih_plug_slint"
version = "0.0.0"
edition = "2021"

[dependencies]
nih_plug = { path = "..", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

plugin-canvas = { git = "https://github.com/lbulla/plugin-things.git", branch = "f/nih-plug" }
plugin-canvas-slint = { git = "https://github.com/lbulla/plugin-things.git", branch = "f/nih-plug" }

crossbeam = "0.8"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
