[package]
name = "nih_plug_vizia"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use VIZIA GUIs with NIH-plug"

[dependencies]
nih_plug = { path = "..", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

baseview = { git = "https://github.com/lbulla/baseview.git", branch = "f/fix_redraw" }
vizia = { git = "https://github.com/lbulla/vizia.git", branch = "f/fix_baseview", default-features = false, features = ["baseview", "clipboard", "x11"] }

crossbeam = "0.8"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
