[package]
name = "gain_gui_slint"
version = "0.1.0"
edition = "2021"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
atomic_refcell = "0.1"
nih_plug = { path = "../../../", features = ["standalone"] }
nih_plug_slint = { path = "../../../nih_plug_slint" }
slint = { version = "1.12.0", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-skia",
    "std",
] }

[build-dependencies]
slint-build = "1.12.0"
