[package]
name = "gain_gui_slint"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
atomic_refcell = "0.1"
nih_plug_slint = { path = "../../../nih_plug_slint" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1.13"
nih_plug = { path = "../../../", default-features = false, features = [
    "au",
    "clap",
    "vst3",
    "standalone",
    "assert_process_allocs",
] }
slint = { version = "1.12.0", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-skia",
    "std",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
nih_plug = { path = "../../../", default-features = false, features = [
    "standalone",
] }
slint = { version = "1.12.0", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-femtovg",
    "std",
] }
wasm-bindgen = "0.2.100"

[build-dependencies]
slint-build = "1.12.0"
